fixed text contrast

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -15,7 +15,7 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   line-height: 1.6;
-  color: #454545;
+  color: #000000;
   min-height: 100vh;
   height: auto !important;
   background-color: #f7f7f7;
