--- a/sass/style.scss
+++ b/sass/style.scss
@@ -84,7 +84,8 @@
 }
 
 .mono {
-  font-family: Consolas, monaco, monospace;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
 }
 
 .header-title {
